<resources>
    <string name="app_name">Cloud Firestore Task</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>

    <string name="empty_list">No related results available.</string>
    <string name="message_no_internet">No data connection</string>
    <string name="divider_bullet">•</string>
    <string name="cars">Cars</string>
    <string name="cities">Cities</string>
    <string name="clothes">Clothes</string>
    <string name="shoes">Shoes</string>
    <string name="title_add">Add</string>

    <string-array name="cities">

        <item>Albuquerque</item>
        <item>Arlington</item>
        <item>Atlanta</item>
        <item>Austin</item>
        <item>Baltimore</item>
        <item>Boston</item>
        <item>Charlotte</item>
        <item>Chicago</item>
        <item>Cleveland</item>
        <item>Colorado Springs</item>
        <item>Columbus</item>
        <item>Dallas</item>
        <item>Denver</item>
        <item>Detroit</item>
        <item>El Paso</item>
        <item>Fort Worth</item>
        <item>Fresno</item>
    </string-array>

    <string-array name="dates">

        <item>1\-1\-2019</item>
        <item>15\-2\-2019</item>
        <item>30\-1\-2019</item>
        <item>12\-5\-2019</item>
        <item>1\-1\-2019</item>
        <item>10\-10\-2019</item>
        <item>1\-10\-2019</item>
        <item>2\-4\-2019</item>
    </string-array>

    <string-array name="publishers">

        <item>Ahmed Khaled</item>
        <item>Osman Ibrahiem</item>
        <item>Eslam Ahmed</item>
        <item>Fouad Ibrahiem</item>
        <item>Salma ElSawy</item>
        <item>Mena Ahmed</item>
        <item>Zaky Ahmed</item>
        <item>Salah Mohamed</item>
    </string-array>


</resources>
