<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_nav"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notification_nav"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_cart_nav"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile_nav"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_nav"
        android:title="@string/title_settings" />

</menu>
